--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,8 @@
         }
       }
     ],
-    "@babel/react"
-  ]
+    "@babel/react",
+    "@babel/preset-typescript"
+  ],
+  "plugins": ["@babel/proposal-class-properties"]
 }
