--- a/package.json
+++ b/package.json
@@ -30,11 +30,18 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "dotenv-webpack": "^7.0.3",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
+    "prettier": "^2.4.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.61.0",
