--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "allowJs": true,
-    "esModuleInterop": true,
+    "target": "es5",
+    "lib": ["dom", "dom.Iterable", "esnext"],
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "jsx": "react",
-    "noImplicitAny": false,
-    "removeComments": true,
-    "strict": false
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "noImplicitAny": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+
+  "include": ["src"]
 }
